# cybersec-toolkit

./: .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint.jsonc  .mcp.json  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  install.sh  opencode.jsonc  ruff.toml  tools_config.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: CURATION.md  LICENSE-Karpathy-MIT  SKILLS.md  curation.json  requirements.txt
.claude/skills/add-tool/: SKILL.md
.claude/skills/ai-llm-security-review/: SKILL.md
.claude/skills/ai-threat-testing/: SKILL.md
.claude/skills/analyzing-email-headers-for-phishing-investigation/: SKILL.md
.claude/skills/authorization-gate/: SKILL.md
.claude/skills/bb-methodology/: SKILL.md
.claude/skills/blockchain-security/: SKILL.md
.claude/skills/bounty-api/: SKILL.md
.claude/skills/bounty-mobile/: SKILL.md
.claude/skills/bounty-recon/: SKILL.md
.claude/skills/bounty-web/: SKILL.md
.claude/skills/bug-bounty/: SKILL.md
.claude/skills/codeql/: SKILL.md
.claude/skills/constant-time-analysis/: SKILL.md
.claude/skills/credential-attack/: SKILL.md
.claude/skills/ctf-crypto/: SKILL.md
.claude/skills/ctf-forensics/: SKILL.md
.claude/skills/ctf-pwn/: SKILL.md
.claude/skills/ctf-rev/: SKILL.md
.claude/skills/ctf-stego/: SKILL.md
.claude/skills/ctf-web/: SKILL.md
.claude/skills/cve-poc-generator/: SKILL.md
.claude/skills/dfir/: SKILL.md
.claude/skills/differential-review/: SKILL.md
.codex/: config.toml
.gemini/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: ci.yml  codeql.yml  integration.yml  release.yml  security.yml  skills-update.yml  uv-update.yml
assets/: how-it-works.mmd
docs/: AI_CLIENTS.md
lib/: common.sh  distro_compat.tsv  installers.sh  shared.sh
manual_scripts/: .gitkeep
mcp_server/: README.md  __init__.py  advisor_utils.py  audit.py  bounty_advisor.py  ctf_advisor.py  cve_advisor.py  guided_assessment.py  known-vulnerabilities.txt  profiles.py  pyproject.toml  remote.py  sanitize.py  security.py  server.py  tools_db.py
mcp_server/tests/: __init__.py  conftest.py  test_audit.py  test_bounty_advisor.py  test_ctf_advisor.py  test_cve_advisor.py  test_guided_assessment.py  test_packaging.py  test_profiles.py  test_remote.py  test_sanitize.py  test_script.py  test_security.py  test_server.py  test_tools_db.py
modules/: ad.sh  blockchain.sh  blueteam.sh  cloud.sh  containers.sh  cracking.sh  crypto.sh  enterprise.sh  forensics.sh  llm.sh  malware.sh  misc.sh  mobile.sh  networking.sh  password.sh  pwn.sh  recon.sh  reversing.sh  stego.sh  web.sh  wireless.sh
profiles/: blockchain.conf  blueteam.conf  cloud.conf  crackstation.conf  ctf.conf  forensics.conf  full.conf  lightweight.conf  malware.conf  mobile.conf  osint.conf  pwn.conf  redteam.conf  web.conf  wireless.conf
scripts/: _bash_arrays.py  _skill_frontmatter.py  audit_skill_dependencies.py  backup.sh  curate_claude_skills.py  mcp-launch.sh  remove.sh  sync-skills.sh  sync-wsl.sh  update-skills.sh  update.sh  validate_agent_docs.py  validate_claude_skills.py  validate_distro_compat.py  validate_mcp_sync.py  validate_profiles.sh  validate_tools_config.py  validate_version.sh  verify.sh
tests/: common.bats  install.bats  installers.bats  modules.bats  profiles.bats  test_helper.bash
(+120 files in other folders)
