[project]
name = "cybersec-tools-mcp"
version = "1.0.0"
description = "MCP server for the cybersec-toolkit — query 580+ tools, get recommendations, execute safely"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0.0,<4.0.0",
]

[project.optional-dependencies]
ctf-core = [
    "requests>=2.31",
    "pycryptodome>=3.19",
    "beautifulsoup4>=4.12",
    "Pillow>=10.0",
    "numpy>=1.24",
]
ctf-extra = [
    "pwntools>=4.11",
    "z3-solver>=4.12",
]

[project.scripts]
cybersec-mcp = "mcp_server.server:main"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["*.py"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
