[project]
name = "cybersec-tools-mcp"
version = "1.0.0"
description = "MCP server for the cybersec-toolkit — query 580+ tools, get recommendations, execute safely"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0.0,<4.0.0",
]

[project.optional-dependencies]
ctf-core = [
    "requests>=2.31",
    "pycryptodome>=3.19",
    "beautifulsoup4>=4.12",
    "Pillow>=10.0",
    "numpy>=1.24",
]
ctf-extra = [
    "pwntools>=4.11",
    "z3-solver>=4.12",
]

[project.scripts]
cybersec-mcp = "mcp_server.server:main"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "mcp_server/__init__.py"
"audit.py" = "mcp_server/audit.py"
"bounty_advisor.py" = "mcp_server/bounty_advisor.py"
"ctf_advisor.py" = "mcp_server/ctf_advisor.py"
"profiles.py" = "mcp_server/profiles.py"
"remote.py" = "mcp_server/remote.py"
"sanitize.py" = "mcp_server/sanitize.py"
"security.py" = "mcp_server/security.py"
"server.py" = "mcp_server/server.py"
"tools_db.py" = "mcp_server/tools_db.py"

[tool.hatch.build.targets.wheel.force-include-editable]
"__init__.py" = "mcp_server/__init__.py"
"audit.py" = "mcp_server/audit.py"
"bounty_advisor.py" = "mcp_server/bounty_advisor.py"
"ctf_advisor.py" = "mcp_server/ctf_advisor.py"
"profiles.py" = "mcp_server/profiles.py"
"remote.py" = "mcp_server/remote.py"
"sanitize.py" = "mcp_server/sanitize.py"
"security.py" = "mcp_server/security.py"
"server.py" = "mcp_server/server.py"
"tools_db.py" = "mcp_server/tools_db.py"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
